# snake2d_game

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
Releases/Win32/: imgui.ini
include/Vector2/: Vector2.h
include/imgui/: imgui_draw.cpp
src/: main.cpp
src/Engine/: Engine.cpp  Engine.h
src/Framework/: Framework.cpp  Framework.h
src/GUI/: GUI.cpp  GUI.h
src/GameManager/: GameManager.cpp  GameManager.h
src/GameObject/: GameObject.cpp  GameObject.h
src/GameObject/Apple/: Apple.cpp  Apple.h
src/GameObject/Background/: Background.h
src/GameObject/Field/: Field.cpp  Field.h
src/GameObject/Food/: Food.cpp  Food.h
src/GameObject/Snake/: Snake.cpp  Snake.h
src/Game_Manager/: GM.cpp  GM.h  Game_Manager.cpp  Game_Manager.h
src/SDLManager/: SDLManager.cpp  SDLManager.h
src/Timer/: Timer.cpp  Timer.h
src/UIManager/: UIManager.cpp  UIManager.h
src/UI_Manager/: UI_Manager.cpp  UI_Manager.h
